--- a/index.html
+++ b/index.html
@@ -65,29 +65,29 @@
       </ul>
     </div>
 
-    <div class="card">
+    <div class="card regras">
       <h2>Regras</h2>
       <ul>
         <li>Proibido utilizar contas Fakes, Bot, API e entre outros se não
             o próprio aplicativo (uso normal) da Semana Tecnológica
             UniFil. O aplicativo está sendo monitorado e, em caso de
             abuso, o participante será desclassificado e não receberá o
-            certificado de participação da Semana Tecnológica</li>
+            certificado de participação da Semana Tecnológica.</li>
         <li>Usuários que postarem conteúdos irrelevantes na timeline do
             app, como por exemplo uma letra ou números aleatórios em
             posts, ou qualquer outro conteúdo que seja considerado
             impróprio pela organização, terão sua timeline bloqueada
             e/ou conteúdo excluído.</li>
         <li>As premiações serão diárias no período de 22 a 26 de
-            setembro</li>
+            setembro.</li>
         <li>Usuários que criarem contas fakes para burlar as regras serão
             desclassificados.</li>
         <li>A pontuação de TODOS os usuários será zerada no início de
-            cada encontro</li>
-        <li>As pontuações podem ser alteradas sem aviso prévio</li>
+            cada encontro.</li>
+        <li>As pontuações podem ser alteradas sem aviso prévio.</li>
         <li>Ganhadores do voucher devem entrar em contato no e-mail
-            nde.computacao@unifil.br</li>
-        <li>Seguir os termos do aplicativo</li>
+            nde.computacao@unifil.br.</li>
+        <li>Seguir os termos do aplicativo.</li>
       </ul>
     </div>
   </div>
