--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Gamificação - Semana Tech</title>
+  <title>Gamificação - Semana Tecnológica</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
@@ -66,7 +66,7 @@
     </div>
 
     <div class="card regras">
-      <h2>Regras</h2>
+      <h2>📜 Regras</h2>
       <ul>
         <li>Proibido utilizar contas Fakes, Bot, API e entre outros se não
             o próprio aplicativo (uso normal) da Semana Tecnológica
