--- a/index.html
+++ b/index.html
@@ -18,77 +18,91 @@
   </div>
 
   <div class="carousel">
-    <div class="card">
-      <h2>Interações</h2>
-      <ul>
-        <li>Primeiro acesso do dia – 20 pts</li>
-        <li>Primeira reação – 20 pts</li>
-        <li>Postagem na timeline – 15 pts</li>
-        <li>Comentário recebido – 15 pts</li>
-        <li>Reação recebida – 10 pts</li>
-      </ul>
+    <h2>Interações</h2>
+    <div class="item">
+      <span class="texto">Primeiro acesso do dia</span><span class="pontos">20 pts</span>
+    </div>
+    <div class="item">
+      <span class="texto">Primeira reação</span><span class="pontos">20 pts</span>
+    </div>
+    <div class="item">
+      <span class="texto">Postagem na timeline</span><span class="pontos">15 pts</span>
+    </div>
+    <div class="item">
+      <span class="texto">Comentário recebido</span><span class="pontos">15 pts</span>
+    </div>
+    <div class="item">
+      <span class="texto">Reação recebida</span><span class="pontos">10 pts</span>
+    </div>
+    <div class="item">
+      <span class="texto">Primeiro comentário</span><span class="pontos">10 pts</span>
+    </div>
+    <div class="item">
+      <span class="texto">Perguntas em formato de vídeo</span><span class="pontos">10 x 2 pts</span>
+    </div>
+    <div class="item">
+      <span class="texto">Selfie com professor</span><span class="pontos">10 pts</span>
+    </div>
+    
+    <h2>Favoritos</h2>
+    <div class="item">
+      <span class="texto">Favoritar patrocinador</span><span class="pontos">50 pts</span>
+    </div>
+    <div class="item">
+      <span class="texto">Favoritar palestrante</span><span class="pontos">50 pts</span>
+    </div>
+    <div class="item">
+      <span class="texto">Favoritar programação</span><span class="pontos">10 pts</span>
     </div>
 
-    <div class="card">
-      <h2>Interações 2</h2>
-      <ul>
-        <li>Primeiro comentário – 10 pts</li>
-        <li>Perguntas em vídeo – 10 x 2 pts</li>
-        <li>Selfie com professor – 10 pts</li>
-        <li>Papel escondido / postar foto – 20 pts</li>
-      </ul>
+    <h2>Networking</h2>
+    <div class="item">
+      <span class="texto">Troca de contatos aceita</span><span class="pontos">20 pts</span>
+    </div>
+    <div class="item">
+      <span class="texto">Primeira mensagem enviada</span><span class="pontos">10 pts</span>
     </div>
 
-    <div class="card">
-      <h2>Favoritos</h2>
-      <ul>
-        <li>Favoritar patrocinador – 50 pts</li>
-        <li>Favoritar palestrante – 50 pts</li>
-        <li>Favoritar programação – 10 pts</li>
-      </ul>
+    <h2>Patrocinadores</h2>
+    <div class="item">
+      <span class="texto">Acessar perfil</span><span class="pontos">50 pts</span>
+    </div>
+    <div class="item">
+      <span class="texto">Clicar em botão do estande</span><span class="pontos">50 pts</span>
+    </div>
+    <div class="item">
+      <span class="texto">Redes sociais do patrocinador</span><span class="pontos">50 pts</span>
     </div>
 
-    <div class="card">
-      <h2>Networking</h2>
-      <ul>
-        <li>Troca de contatos aceita – 20 pts</li>
-        <li>Primeira mensagem enviada – 10 pts</li>
-      </ul>
+    <h2>📜 Regras</h2>
+    <h3>🚫 Proibições</h3>
+    <div class="item regra">
+      <span class="texto">Proibido utilizar contas Fakes, Bot, API ou qualquer método fora do app oficial.</span>
+    </div>
+    <div class="item regra">
+      <span class="texto">Usuários que postarem conteúdos irrelevantes terão sua timeline bloqueada.</span>
+    </div>
+    <div class="item regra">
+      <span class="texto">Criação de contas fakes resultará em desclassificação imediata.</span>
     </div>
 
-    <div class="card">
-      <h2>Patrocinadores</h2>
-      <ul>
-        <li>Acessar perfil – 50 pts</li>
-        <li>Clicar em botão do estande – 50 pts</li>
-        <li>Redes sociais do patrocinador – 50 pts</li>
-      </ul>
+    <h3>🏆 Premiações</h3>
+    <div class="item regra">
+      <span class="texto">As premiações serão diárias durante o período de 22 a 26 de setembro.</span>
+    </div>
+    <div class="item regra">
+      <span class="texto">A pontuação será zerada no início de cada encontro.</span>
+    </div>
+    <div class="item regra">
+      <span class="texto">As pontuações podem ser alteradas sem aviso prévio.</span>
     </div>
 
-    <div class="card regras">
-      <h2>📜 Regras</h2>
-      <ul>
-        <li>Proibido utilizar contas Fakes, Bot, API e entre outros se não
-            o próprio aplicativo (uso normal) da Semana Tecnológica
-            UniFil. O aplicativo está sendo monitorado e, em caso de
-            abuso, o participante será desclassificado e não receberá o
-            certificado de participação da Semana Tecnológica.</li>
-        <li>Usuários que postarem conteúdos irrelevantes na timeline do
-            app, como por exemplo uma letra ou números aleatórios em
-            posts, ou qualquer outro conteúdo que seja considerado
-            impróprio pela organização, terão sua timeline bloqueada
-            e/ou conteúdo excluído.</li>
-        <li>As premiações serão diárias no período de 22 a 26 de
-            setembro.</li>
-        <li>Usuários que criarem contas fakes para burlar as regras serão
-            desclassificados.</li>
-        <li>A pontuação de TODOS os usuários será zerada no início de
-            cada encontro.</li>
-        <li>As pontuações podem ser alteradas sem aviso prévio.</li>
-        <li>Ganhadores do voucher devem entrar em contato no e-mail
-            nde.computacao@unifil.br.</li>
-        <li>Seguir os termos do aplicativo.</li>
-      </ul>
+    <h3>📧 Contato</h3>
+    <div class="item regra">
+      <span class="texto">Ganhadores do voucher devem entrar em contato no e-mail: <strong>nde.computacao@unifil.br</strong>.</span>
+    </div>
+    <div class="item regra">
+      <span class="texto">Seguir todos os termos do aplicativo.</span>
     </div>
   </div>
 </body>
