--- a/index.html
+++ b/index.html
@@ -38,12 +38,12 @@
       <span class="texto">Primeiro comentário</span><span class="pontos">10 pts</span>
     </div>
     <div class="item">
-      <span class="texto">Perguntas em formato de vídeo</span><span class="pontos">10 x 2 pts</span>
+      <span class="texto">Perguntas em formato de vídeo</span><span class="pontos">10 pts x 2</span>
     </div>
     <div class="item">
       <span class="texto">Selfie com professor</span><span class="pontos">10 pts</span>
     </div>
-    
+
     <h2>Favoritos</h2>
     <div class="item">
       <span class="texto">Favoritar patrocinador</span><span class="pontos">50 pts</span>
@@ -74,35 +74,27 @@
       <span class="texto">Redes sociais do patrocinador</span><span class="pontos">50 pts</span>
     </div>
 
-    <h2>📜 Regras</h2>
-    <h3>🚫 Proibições</h3>
-    <div class="item regra">
-      <span class="texto">Proibido utilizar contas Fakes, Bot, API ou qualquer método fora do app oficial.</span>
-    </div>
-    <div class="item regra">
-      <span class="texto">Usuários que postarem conteúdos irrelevantes terão sua timeline bloqueada.</span>
-    </div>
-    <div class="item regra">
-      <span class="texto">Criação de contas fakes resultará em desclassificação imediata.</span>
-    </div>
+    <div class="card-regras">
+      <h2 class="titulo-regras">📜 Regras</h2>
+      <h3>🚫 Proibições</h3>
+      <ul>
+        <li>Proibido utilizar contas Fakes, Bot, API ou qualquer método fora do app oficial.</li>
+        <li>Usuários que postarem conteúdos irrelevantes terão sua timeline bloqueada.</li>
+        <li>Criação de contas fakes resultará em desclassificação imediata.</li>
+      </ul>
 
-    <h3>🏆 Premiações</h3>
-    <div class="item regra">
-      <span class="texto">As premiações serão diárias durante o período de 22 a 26 de setembro.</span>
-    </div>
-    <div class="item regra">
-      <span class="texto">A pontuação será zerada no início de cada encontro.</span>
-    </div>
-    <div class="item regra">
-      <span class="texto">As pontuações podem ser alteradas sem aviso prévio.</span>
-    </div>
+      <h3>🏆 Premiações</h3>
+      <ul>
+        <li>As premiações serão diárias durante o período de 22 a 26 de setembro.</li>
+        <li>A pontuação será zerada no início de cada encontro.</li>
+        <li>As pontuações podem ser alteradas sem aviso prévio.</li>
+      </ul>
 
-    <h3>📧 Contato</h3>
-    <div class="item regra">
-      <span class="texto">Ganhadores do voucher devem entrar em contato no e-mail: <strong>nde.computacao@unifil.br</strong>.</span>
-    </div>
-    <div class="item regra">
-      <span class="texto">Seguir todos os termos do aplicativo.</span>
+      <h3>📧 Contato</h3>
+      <ul>
+        <li>Ganhadores do voucher devem entrar em contato no e-mail: <strong>nde.computacao@unifil.br</strong>.</li>
+        <li>Seguir todos os termos do aplicativo.</li>
+      </ul>
     </div>
   </div>
 </body>
