--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
 </head>
 <body>
   <div class="recompensas">
-    <h1>🎮 Regras de Gamificação</h1>
-    <p>XIX Semana Tecnológica 2025</p>
+    <h1>🎮 Regras da Gamificação</h1>
+    <p><b>XIX Semana Tecnológica 2025</b></p>
     <div class="premios">
-      <p><strong>1º:</strong> Camiseta Polo 44 anos</p>
-      <p><strong>2º:</strong> Camiseta 44 anos</p>
-      <p><strong>3º:</strong> Case</p>
+      <p><strong>1º:</strong> Capa de Notebook</p>
+      <p><strong>2º:</strong> Hub de Conectores</p>
+      <p><strong>3º:</strong> Case Computação</p>
     </div>
   </div>
 
@@ -81,6 +81,7 @@
         <li>Proibido utilizar contas Fakes, Bot, API ou qualquer método fora do app oficial.</li>
         <li>Usuários que postarem conteúdos irrelevantes terão sua timeline bloqueada.</li>
         <li>Criação de contas fakes resultará em desclassificação imediata.</li>
+        <li>Estudantes devem criar as contas com o e-mail institucional (@edu). Caso contrário, a conta será excluída</li>
       </ul>
 
       <h3>🏆 Premiações</h3>
