Ajustando o layout e a premiação

--- a/index.html
+++ b/index.html
@@ -1,102 +1,135 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Gamificação - Semana Tecnológica</title>
-  <link rel="stylesheet" href="style.css" />
+	<meta charset="UTF-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<title>Gamificação - Semana Tecnológica</title>
+	<link rel="stylesheet" href="style.css" />
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 </head>
+
 <body>
-  <div class="recompensas">
-    <h1>🎮 Regras da Gamificação</h1>
-    <p><b>XIX Semana Tecnológica 2025</b></p>
-    <div class="premios">
-      <p><strong>1º:</strong> Capa de Notebook</p>
-      <p><strong>2º:</strong> Hub de Conectores</p>
-      <p><strong>3º:</strong> Case Computação</p>
-    </div>
-  </div>
+	<div class="titulo">
+		<h1>XIX Semana Tecnológica 2025</h1>
+		<h2>🎮 Regras da Gamificação</h2>
+	</div>
 
-  <div class="carousel">
-    <h2>Interações</h2>
-    <div class="item">
-      <span class="texto">Primeiro acesso do dia</span><span class="pontos">20 pts</span>
-    </div>
-    <div class="item">
-      <span class="texto">Primeira reação</span><span class="pontos">20 pts</span>
-    </div>
-    <div class="item">
-      <span class="texto">Postagem na timeline</span><span class="pontos">5 pts</span>
-    </div>
-    <div class="item">
-      <span class="texto">Comentário recebido</span><span class="pontos">15 pts</span>
-    </div>
-    <div class="item">
-      <span class="texto">Reação recebida</span><span class="pontos">10 pts</span>
-    </div>
-    <div class="item">
-      <span class="texto">Primeiro comentário</span><span class="pontos">10 pts</span>
-    </div>
-    <div class="item">
-      <span class="texto">Perguntas em formato de vídeo</span><span class="pontos">10 pts x 2</span>
-    </div>
-    <div class="item">
-      <span class="texto">Selfie com professor</span><span class="pontos">10 pts</span>
-    </div>
+	<div class="carrossel">
 
-    <h2>Favoritos</h2>
-    <div class="item">
-      <span class="texto">Favoritar patrocinador</span><span class="pontos">50 pts</span>
-    </div>
-    <div class="item">
-      <span class="texto">Favoritar palestrante</span><span class="pontos">50 pts</span>
-    </div>
-    <div class="item">
-      <span class="texto">Favoritar programação</span><span class="pontos">10 pts</span>
-    </div>
+		<h2>Premiação da Semana</h2>
+		<div class="item">
+			<span><strong>1º Lugar:</strong> Camiseta 44 Anos</span>
+		</div>
+		<div class="item">
+			<span><strong>2º Lugar:</strong> Case Computação</span>
+		</div>
+		<div class="item">
+			<span><strong>3º Lugar:</strong> Suporte de Celular</span>
+		</div>
 
-    <h2>Networking</h2>
-    <div class="item">
-      <span class="texto">Troca de contatos aceita</span><span class="pontos">20 pts</span>
-    </div>
-    <div class="item">
-      <span class="texto">Primeira mensagem enviada</span><span class="pontos">10 pts</span>
-    </div>
+		<h2>Interações</h2>
+		<div class="item">
+			<span class="texto">Primeiro acesso do dia</span>
+			<span class="pontos">20 pts</span>
+		</div>
+		<div class="item">
+			<span class="texto">Primeira reação</span>
+			<span class="pontos">20 pts</span>
+		</div>
+		<div class="item">
+			<span class="texto">Postagem na timeline</span>
+			<span class="pontos">5 pts</span>
+		</div>
+		<div class="item">
+			<span class="texto">Comentário recebido</span>
+			<span class="pontos">15 pts</span>
+		</div>
+		<div class="item">
+			<span class="texto">Reação recebida</span>
+			<span class="pontos">10 pts</span>
+		</div>
+		<div class="item">
+			<span class="texto">Primeiro comentário</span>
+			<span class="pontos">10 pts</span>
+		</div>
+		<div class="item">
+			<span class="texto">Perguntas em formato de vídeo</span>
+			<span class="pontos">10 pts x 2</span>
+		</div>
+		<div class="item">
+			<span class="texto">Selfie com professor com a hashtag #SelfieComProfessor</span>
+			<span class="pontos">10 pts</span>
+		</div>
 
-    <h2>Patrocinadores</h2>
-    <div class="item">
-      <span class="texto">Acessar perfil</span><span class="pontos">50 pts</span>
-    </div>
-    <div class="item">
-      <span class="texto">Clicar em botão do estande</span><span class="pontos">50 pts</span>
-    </div>
-    <div class="item">
-      <span class="texto">Redes sociais do patrocinador</span><span class="pontos">50 pts</span>
-    </div>
+		<h2>Favoritos</h2>
+		<div class="item">
+			<span class="texto">Favoritar patrocinador</span>
+			<span class="pontos">50 pts</span>
+		</div>
+		<div class="item">
+			<span class="texto">Favoritar palestrante</span>
+			<span class="pontos">50 pts</span>
+		</div>
+		<div class="item">
+			<span class="texto">Favoritar programação</span>
+			<span class="pontos">10 pts</span>
+		</div>
 
-    <div class="card-regras">
-      <h2 class="titulo-regras">📜 Regras</h2>
-      <h3>🚫 Proibições</h3>
-      <ul>
-        <li>Proibido utilizar contas Fakes, Bot, API ou qualquer método fora do app oficial.</li>
-        <li>Usuários que postarem conteúdos irrelevantes terão sua timeline bloqueada.</li>
-        <li>Criação de contas fakes resultará em desclassificação imediata.</li>
-        <li>Estudantes devem criar as contas com o e-mail institucional (@edu), nome completo e foto própria. Caso contrário, a conta será excluída</li>
-      </ul>
+		<h2>Networking</h2>
+		<div class="item">
+			<span class="texto">Troca de contatos aceita</span>
+			<span class="pontos">20 pts</span>
+		</div>
+		<div class="item">
+			<span class="texto">Primeira mensagem enviada</span>
+			<span class="pontos">10 pts</span>
+		</div>
 
-      <h3>🏆 Premiações</h3>
-      <ul>
-        <li>As premiações serão diárias durante o período de 22 a 26 de setembro.</li>
-        <li>A pontuação será zerada no início de cada encontro.</li>
-        <li>As pontuações podem ser alteradas sem aviso prévio.</li>
-      </ul>
+		<h2>Patrocinadores</h2>
+		<div class="item">
+			<span class="texto">Acessar perfil</span>
+			<span class="pontos">50 pts</span>
+		</div>
+		<div class="item">
+			<span class="texto">Clicar em botão do estande</span>
+			<span class="pontos">50 pts</span>
+		</div>
+		<div class="item">
+			<span class="texto">Redes sociais do patrocinador</span>
+			<span class="pontos">50 pts</span>
+		</div>
 
-      <h3>📧 Contato</h3>
-      <ul>
-        <li>Ganhadores do voucher devem entrar em contato no e-mail: <strong>nde.computacao@unifil.br</strong>.</li>
-        <li>Seguir todos os termos do aplicativo.</li>
-      </ul>
-    </div>
-  </div>
+		<div class="card-regras">
+			<h2 class="titulo-regras">📜 Regras</h2>
+
+			<h3>🚫 Proibições</h3>
+			<ul>
+				<li>Proibido utilizar contas Fakes, Bot, API ou qualquer método fora do app oficial.</li>
+				<li>Usuários que postarem conteúdos irrelevantes terão sua timeline bloqueada.</li>
+				<li>Criação de contas fakes resultará em desclassificação imediata.</li>
+				<li>Estudantes devem criar as contas com o e-mail institucional (@edu), nome completo e foto própria.
+					Caso contrário, a conta será excluída</li>
+			</ul>
+
+			<h3>🏆 Premiações</h3>
+			<ul>
+				<li>As premiações serão diárias durante o período de 22 a 26 de setembro.</li>
+				<li>A pontuação será zerada no início de cada encontro.</li>
+				<li>As pontuações podem ser alteradas sem aviso prévio.</li>
+			</ul>
+
+			<h3>📧 Contato</h3>
+			<ul>
+				<li>Ganhadores do voucher devem entrar em contato no e-mail: <strong>nde.computacao@unifil.br</strong>.
+				</li>
+				<li>Seguir todos os termos do aplicativo.</li>
+			</ul>
+
+		</div>
+	</div>
 </body>
+
 </html>
