--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 				<li>Proibido utilizar contas Fakes, Bot, API ou qualquer método fora do app oficial.</li>
 				<li>Usuários que postarem conteúdos irrelevantes terão sua timeline bloqueada.</li>
 				<li>Criação de contas fakes resultará em desclassificação imediata.</li>
-				<li>Estudantes devem criar as contas com o e-mail institucional (@edu), nome completo e foto própria.
+				<li>Estudantes devem criar as contas com o e-mail institucional (@edu) e nome completo.
 					Caso contrário, a conta será excluída</li>
 			</ul>
 
