--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 		<h2>Premiação da Semana</h2>
 		<div class="item">
-			<span><strong>1º Lugar:</strong> Camiseta 44 Anos</span>
+			<span><strong>1º Lugar:</strong> Pasta de Notebook</span>
 		</div>
 		<div class="item">
 			<span><strong>2º Lugar:</strong> Case Computação</span>
