--- a/index.html
+++ b/index.html
@@ -41,10 +41,10 @@
 		</div>
 		<div class="item">
 			<span class="texto">Postagem na timeline</span>
-			<span class="pontos">5 pts</span>
+			<span class="pontos">25 pts</span>
 		</div>
 		<div class="item">
-			<span class="texto">Comentário recebido</span>
+			<span class="texto">Primeiro comentário recebido em seu post</span>
 			<span class="pontos">15 pts</span>
 		</div>
 		<div class="item">
@@ -52,16 +52,12 @@
 			<span class="pontos">10 pts</span>
 		</div>
 		<div class="item">
-			<span class="texto">Primeiro comentário</span>
+			<span class="texto">Primeiro a comentar no post de alguém</span>
 			<span class="pontos">10 pts</span>
 		</div>
 		<div class="item">
 			<span class="texto">Perguntas em formato de vídeo</span>
 			<span class="pontos">10 pts x 2</span>
-		</div>
-		<div class="item">
-			<span class="texto">Selfie com professor com a hashtag #SelfieComProfessor</span>
-			<span class="pontos">10 pts</span>
 		</div>
 
 		<h2>Favoritos</h2>
