--- a/index.html
+++ b/index.html
@@ -18,25 +18,9 @@
 	</div>
 
 	<div class="carrossel">
-
-		<h2>Premiação da Semana</h2>
-		<div class="item">
-			<span><strong>1º Lugar:</strong> Pasta de Notebook</span>
-		</div>
-		<div class="item">
-			<span><strong>2º Lugar:</strong> Case Computação</span>
-		</div>
-		<div class="item">
-			<span><strong>3º Lugar:</strong> Suporte de Celular</span>
-		</div>
-
 		<h2>Interações</h2>
 		<div class="item">
 			<span class="texto">Primeiro acesso do dia</span>
-			<span class="pontos">20 pts</span>
-		</div>
-		<div class="item">
-			<span class="texto">Primeira reação</span>
 			<span class="pontos">20 pts</span>
 		</div>
 		<div class="item">
@@ -44,20 +28,24 @@
 			<span class="pontos">25 pts</span>
 		</div>
 		<div class="item">
+			<span class="texto">Primeira reação recebido em seu post</span>
+			<span class="pontos">15 pts</span>
+		</div>
+		<div class="item">
+			<span class="texto">Seja o primeiro a reagir em algum post</span>
+			<span class="pontos">15 pts</span>
+		</div>
+		<div class="item">
 			<span class="texto">Primeiro comentário recebido em seu post</span>
 			<span class="pontos">15 pts</span>
 		</div>
 		<div class="item">
-			<span class="texto">Reação recebida</span>
-			<span class="pontos">10 pts</span>
-		</div>
-		<div class="item">
-			<span class="texto">Primeiro a comentar no post de alguém</span>
-			<span class="pontos">10 pts</span>
+			<span class="texto">Seja o primeiro a comentar em algum post</span>
+			<span class="pontos">15 pts</span>
 		</div>
 		<div class="item">
 			<span class="texto">Perguntas em formato de vídeo</span>
-			<span class="pontos">10 pts x 2</span>
+			<span class="pontos">15 pts x 2</span>
 		</div>
 
 		<h2>Favoritos</h2>
